--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "main.js",
   "scripts": {
     "test": "karma start",
-    "start": "export NODE_ENV='development'; webpack --config webpack.development.js --watch --progress",
-    "electron": "export NODE_ENV='development'; webpack --config webpack.development.js --watch & electron ."
+    "start": "export NODE_ENV='development'; webpack --config webpack/webpack.development.js --watch --progress",
+    "electron": "export NODE_ENV='development'; webpack --config webpack/webpack.development.js --watch & electron ."
   },
   "babel": {
     "plugins": [
@@ -49,6 +49,7 @@
     "browser-sync": "^2.10.0",
     "browser-sync-webpack-plugin": "^1.0.1",
     "chai": "^3.4.1",
+    "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "deep-freeze": "0.0.1",
     "electron-debug": "^0.5.1",
