--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
+    "react-router-redux": "^3.0.0",
     "redux": "^3.0.5",
     "redux-devtools": "^3.0.1",
     "redux-logger": "^2.3.2",
-    "redux-simple-router": "^2.0.3",
     "redux-thunk": "^1.0.3",
     "rx": "^4.0.0",
     "superagent": "^1.4.0"
@@ -55,7 +55,7 @@
     "electron-debug": "^0.5.1",
     "electron-packager": "^5.1.1",
     "electron-prebuilt": "^0.36.4",
-    "eslint": "^2.0.0",
+    "eslint": "^1.6.0",
     "eslint-loader": "^1.2.0",
     "eslint-plugin-react": "^3.11.2",
     "extract-text-webpack-plugin": "^1.0.1",
