--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "karma start",
-    "start": "export NODE_ENV='development'; webpack --config webpack/webpack.development.js --watch --progress",
-    "electron": "export NODE_ENV='development'; webpack --config webpack/webpack.development.js --watch & electron .",
+    "start": "export NODE_ENV='development'; webpack-dev-server --config webpack/webpack.development.js --progress --colors --inline",
+    "electron": "export NODE_ENV='development'; electron .",
     "clean": "rm -rf public/build"
   },
   "babel": {
